<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/secondary"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="35dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/register"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/regi"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/secondary"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="22dp"
            android:layout_marginTop="25dp"
            android:text="@string/full_name"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_singin"
            android:orientation="vertical"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/border"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/secondary"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="22dp"
            android:layout_marginTop="25dp"
            android:text="@string/gmail"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gmail_singin"
            android:orientation="vertical"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/border"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/secondary"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="22dp"
            android:layout_marginTop="25dp"
            android:text="@string/password"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pass_singin"
            android:orientation="vertical"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/border"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/secondary"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="22dp"
            android:layout_marginTop="25dp"
            android:text="@string/phone_number"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_singin"
            android:orientation="vertical"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/border"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/secondary"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="22dp"
            android:layout_marginTop="25dp"
            android:text="@string/address"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address_singin"
            android:orientation="vertical"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/border"/>
        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/register"
            android:layout_width="200dp"
            android:text="@string/register_now"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/secondary"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary"
                android:layout_gravity="start"
                android:textStyle="bold"
                android:gravity="start"
                android:textSize="20dp"
                android:text="@string/if_your_have_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/tertiary"
                android:layout_gravity="start"
                android:textStyle="bold"
                android:gravity="start"
                android:textSize="22dp"
                android:id="@+id/regi_log"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:text="@string/login_now" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>