<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBudget">
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="Add New Butget"
            android:textAlignment="center"
            android:textColor="@color/secondary"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="Full Name"
            android:textColor="@color/secondary"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="5dp"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="Butget Name"
            android:textColor="@color/secondary"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/butget_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="5dp"
            android:textSize="25dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="Budget Amount"
            android:textColor="@color/secondary"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ammount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="5dp"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/budget_category"
            android:textColor="@color/secondary"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/catagory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="5dp"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/start_date"
            android:textColor="@color/secondary"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/startdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="5dp"
            android:textSize="25dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/end_date"
            android:textColor="@color/secondary"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/endtdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="5dp"
            android:textSize="25dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="@color/secondary"
            android:text="Add Butget"
            android:id="@+id/addbutget"
            android:textSize="25dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:id="@+id/gobackbutget"
            android:backgroundTint="@color/secondary"
            android:text="Go Back"
            android:textSize="25dp" />

    </LinearLayout>
</ScrollView>